log
Fri May 13 15:20:28 UTC 2022: 
 sudoku.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:21: error: ‘c’ undeclared (first use in this function)
         scanf("%c",&c);
                     ^
sudoku.c:51:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:52:9: error: ‘a’ undeclared (first use in this function)
         a[i][j]=c-'0';
         ^
sudoku.c:55:5: error: ‘flag’ undeclared (first use in this function); did you mean ‘float’?
     flag=0x0000;
     ^~~~
     float
sudoku.c:59:9: error: implicit declaration of function ‘reporta’ [-Werror=implicit-function-declaration]
         reporta("fila",i,j-1);
         ^~~~~~~
sudoku.c:68:7: error: ‘si’ undeclared (first use in this function); did you mean ‘i’?
   for(si=0;si<3;si++){
       ^~
       i
sudoku.c:69:9: error: ‘sj’ undeclared (first use in this function); did you mean ‘si’?
     for(sj=0;sj<3;sj++)
         ^~
         si
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
33d9403
Fri May 13 15:22:36 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:17: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int *’ [-Werror=format=]
         scanf("%c",&c);
                ~^  ~~
                %lc
sudoku.c:52:10: error: subscripted value is neither array nor pointer nor vector
         a[i][j]=c-'0';
          ^
sudoku.c:56:20: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(a[i][j]-1);
                    ^
sudoku.c:58:9: error: implicit declaration of function ‘reporta’ [-Werror=implicit-function-declaration]
         reporta("fila",i,j-1);
         ^~~~~~~
sudoku.c:63:20: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(a[i][j]-1);
                    ^
sudoku.c:68:9: error: ‘sj’ undeclared (first use in this function); did you mean ‘si’?
     for(sj=0;sj<3;sj++)
         ^~
         si
sudoku.c:68:9: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:28: error: subscripted value is neither array nor pointer nor vector
                 flag|=1<<(a[si*3+i][sj*3+j]-1);
                            ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:47:13: error: variable ‘a’ set but not used [-Werror=unused-but-set-variable]
   int i, j, a, c, flag = 0, si;
             ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e583acb
Fri May 13 15:24:03 UTC 2022: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:17: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int *’ [-Werror=format=]
         scanf("%c",&c);
                ~^  ~~
                %lc
sudoku.c:52:13: error: subscripted value is neither array nor pointer nor vector
         n[i][j]=c-'0';
             ^
sudoku.c:56:23: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(n[i][j]-1);
                       ^
sudoku.c:58:9: error: implicit declaration of function ‘reporta’ [-Werror=implicit-function-declaration]
         reporta("fila",i,j-1);
         ^~~~~~~
sudoku.c:63:23: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(n[i][j]-1);
                       ^
sudoku.c:68:9: error: ‘sj’ undeclared (first use in this function); did you mean ‘si’?
     for(sj=0;sj<3;sj++)
         ^~
         si
sudoku.c:68:9: note: each undeclared identifier is reported only once for each function it appears in
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
694e1c1
Fri May 13 15:24:11 UTC 2022: 
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:17: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int *’ [-Werror=format=]
         scanf("%c",&c);
                ~^  ~~
                %lc
sudoku.c:52:13: error: subscripted value is neither array nor pointer nor vector
         n[i][j]=c-'0';
             ^
sudoku.c:56:23: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(n[i][j]-1);
                       ^
sudoku.c:58:9: error: implicit declaration of function ‘reporta’ [-Werror=implicit-function-declaration]
         reporta("fila",i,j-1);
         ^~~~~~~
sudoku.c:63:23: error: subscripted value is neither array nor pointer nor vector
         flag|=1<<(n[i][j]-1);
                       ^
sudoku.c:68:9: error: ‘sj’ undeclared (first use in this function); did you mean ‘si’?
     for(sj=0;sj<3;sj++)
         ^~
         si
sudoku.c:68:9: note: each undeclared identifier is reported only once for each function it appears in
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72eaf6f
Fri May 13 15:43:08 UTC 2022: 
 sudoku.c | 42 +++++++++++-------------------------------
 1 file changed, 11 insertions(+), 31 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:28: error: self-comparison always evaluates to true [-Werror=tautological-compare]
           if(n->sudo[f][c] == n->sudo[f][c]){
                            ^~
sudoku.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fc4dd5d
Fri May 13 15:43:34 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
6aba8e2
Fri May 13 15:44:29 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
609125d
Fri May 13 15:44:37 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b94a09e
